# IsItCompatible-GameNative

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  build.gradle.kts
.github/: FUNDING.yml
.github/workflows/: app-release-signed.yml  issues-contributors-only.yml  pluvia-pr-check.yml  tagged-release.yml
PrivacyPolicy/: README.md
app/: .gitignore  build.gradle.kts
app/schemas/app.gamenative.db.PluviaDatabase/: 10.json  11.json  13.json  21.json  8.json  9.json
app/src/legacy/: AndroidManifest.xml
app/src/legacy/assets/dxwrapper/: vkd3d-3.0b.tzst
app/src/legacy/assets/graphics_driver/: adrenotools-turnip25.3.0_R11.tzst  adrenotools-turnip25.3.0_R3_Auto.tzst  adrenotools-turnip25.3.0_R3_Gmem.tzst  adrenotools-turnip25.3.0_R6_Gmem.tzst  adrenotools-turnip26.0.0_R4.tzst  libvulkan_wrapper.tar.xz  turnip-25.1.0.tzst  vortek-2.1.tzst  wrapper-leegao.tzst
app/src/main/: AndroidManifest.xml
app/src/main/assets/: box64_env_vars.json  container_files_download.json  core_drivers_download.json  dxwrapper_download.json  graphics_driver_download.json  pulseaudio-gamenative-20260606.tzst  redirect.tzst  wincomponents_download.json
app/src/main/assets/box86_64/: box64-0.3.8-bionic.tzst  box64-0.4.0-bionic.tzst
app/src/main/assets/cheattables/: registry.json
app/src/main/assets/fexcore/: fexcore-2508.tzst  fexcore-2511.tzst  fexcore-2512.tzst  fexcore-2601.tzst
app/src/main/assets/gamefixes/: collections.json  registry.json
app/src/main/assets/inputcontrols/profiles/: controls-0.icp
app/src/main/assets/wincomponents/: wincomponents.json
app/src/main/assets/wowbox64/: wowbox64-0.4.0.tzst
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/cheatdll/: README.md  cheat.c  proxy.c
app/src/main/cpp/evshim/: CMakeLists.txt  evshim.c  macro_protocol.h
app/src/main/cpp/evshim/SDL2/: SDL.h
app/src/main/cpp/extras/: CMakeLists.txt  gpu_image.c  vulkan.c
app/src/main/cpp/speedhack/: CMakeLists.txt  libspeedhack.c  speedhack_protocol.h
app/src/main/cpp/steambootstrap/: CMakeLists.txt
app/src/main/cpp/trainer/: CMakeLists.txt  libtrainer.c  trainer_protocol.h
app/src/main/cpp/winlator/: VulkanRendererContext.cpp  VulkanRendererContext.h  VulkanRendererScanout.cpp  vulkan_jni.cpp  window.frag  window.vert
app/src/main/cpp/xconnectorpatch/: CMakeLists.txt
app/src/main/java/app/gamenative/: Constants.kt  CrashHandler.kt  MainActivity.kt  PluviaApp.kt  PrefManager.kt  SteamBootstrap.kt
app/src/main/java/app/gamenative/api/: ApiResult.kt  GameRunApi.kt  SupportersApi.kt
app/src/main/java/app/gamenative/autotuner/: AppliedFix.kt  AutoTunerEngine.kt  FixLadder.kt  SweepPlan.kt  TunerDimension.kt  TunerGoal.kt  TunerProgressTypes.kt  TunerResult.kt  TunerSensors.kt  TunerShareUtils.kt
app/src/main/java/app/gamenative/cheats/: CheatExecutor.kt  CheatStager.kt  CheatTable.kt  CheatTableLoader.kt  CheatTableRegistry.kt  CheatTableSyncWorker.kt  CheatUiState.kt  ProxyCtrl.kt
app/src/main/java/app/gamenative/data/: ConfigInfo.kt  EncryptedAppTicket.kt  GOGCloudSavesLocation.kt  PostSyncInfo.kt  SteamFileHashCache.kt  SteamFriend.kt
app/src/main/java/app/gamenative/db/: PluviaDatabase.kt
app/src/main/java/app/gamenative/di/: DatabaseModule.kt
app/src/main/java/app/gamenative/enums/: Marker.kt  SpecialGameSaveMapping.kt
app/src/main/java/app/gamenative/events/: AndroidEvent.kt  EventDispatcher.kt
app/src/main/java/app/gamenative/externaldisplay/: ExternalDisplaySwapController.kt
app/src/main/java/app/gamenative/gamefixes/: CollectionRegistry.kt  GameFixesRegistry.kt  GameFixesSyncWorker.kt  JsonGameFixLoader.kt  STEAM_105600.kt  STEAM_1091500.kt  STEAM_1145360.kt  STEAM_1174180.kt  STEAM_1245620.kt  STEAM_1593500.kt  STEAM_208650.kt  STEAM_268910.kt  STEAM_271590.kt  STEAM_292030.kt  STEAM_367520.kt  STEAM_374320.kt  STEAM_489830.kt  STEAM_524220.kt  STEAM_582010.kt  STEAM_601150.kt  STEAM_631510.kt
app/src/main/java/app/gamenative/iic/: AutoTunerResultBroadcaster.kt  IicStability.kt  SessionFeedbackBroadcaster.kt
app/src/main/res/drawable/: ic_input_kbd_0.xml  ic_input_kbd_1.xml  ic_input_kbd_2.xml  ic_input_kbd_3.xml  ic_input_kbd_4.xml  ic_input_kbd_5.xml  ic_input_kbd_6.xml  ic_input_kbd_7.xml  ic_input_kbd_8.xml  ic_input_kbd_9.xml  ic_input_kbd_a.xml  ic_input_kbd_alt.xml  ic_input_kbd_any.xml  ic_input_kbd_apostrophe.xml  ic_input_kbd_arrow_down.xml  ic_input_kbd_arrow_left.xml  ic_input_kbd_arrow_right.xml  ic_input_kbd_arrow_up.xml  ic_input_kbd_arrows.xml  ic_input_kbd_arrows_all.xml  ic_input_kbd_arrows_down.xml  ic_input_kbd_arrows_horizontal.xml  ic_input_kbd_arrows_left.xml  ic_input_kbd_arrows_none.xml  ic_input_kbd_arrows_right.xml  ic_input_kbd_arrows_up.xml  ic_input_kbd_arrows_vertical.xml  ic_input_kbd_asterisk.xml  ic_input_kbd_b.xml  ic_input_kbd_backspace.xml  ic_input_kbd_backspace_icon.xml  ic_input_kbd_backspace_icon_alternative.xml  ic_input_kbd_bracket_close.xml  ic_input_kbd_bracket_greater.xml  ic_input_kbd_bracket_less.xml  ic_input_kbd_bracket_open.xml  ic_input_kbd_c.xml  ic_input_kbd_capslock.xml  ic_input_kbd_capslock_icon.xml  ic_input_kbd_caret.xml  (+183 more)
app/src/main/res/drawable-anydpi/: ic_notification.xml
app/src/main/res/mipmap-anydpi-v26/: ic_shortcut_filter.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-da/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ro/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-v35/: themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/testModern/resources/: robolectric.properties
gradle/: libs.versions.toml
ubuntufs/: build.gradle.kts
(+228 files in other folders)
